--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Configuration Files
 config.json
+*.json
 
 # Python cache
 __pycache__/
@@ -25,6 +26,7 @@ Thumbs.db
 
 # Data files
 data/vector_store/
+data/vector_store_old/
 data/processed/
 # data/input/ # Optional: Uncomment if you don't want to commit input files
 
